# egg

./: .gitignore  LICENSE  README.md  Vagrantfile  current  egglang.cabal  example.egg  foo.ll  stack.yaml
app/: EggcExe.hs  Lex.hs  Main.hs  Parsegg.hs  REPL.hs
src/: Codegen.hs  Compiler.hs  Instructions.hs  LLVM.hs  Lexer.hs  Parser.hs  Supply.hs  TypeCheck.hs  Types.hs  Unification.hs
src/Codegen/: LambdaLifting.hs  Util.hs
src/Control/: Cofree.hs
src/Data/: Expr.hs
src/TypeCheck/: Check.hs
src/Types/: BlockState.hs  Constant.hs  Declaration.hs  EType.hs  Expr.hs  FunDef.hs  Gen.hs  GeneratorState.hs  Token.hs
src/Unification/: Scheme.hs  Substitutable.hs  TyContext.hs
test/: Spec.hs
test/Test/: Compiler.hs  Expr.hs  Lex.hs  Parser.hs  Unification.hs
test/resources/: addition.egg  arithmetic.egg  closure.egg  fact.egg  function_calls.egg  lam.egg  return42.egg
