name:                egglang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/breestanwyck/egglang#readme
license:             BSD3
license-file:        LICENSE
author:              Bree Elle Stanwyck
maintainer:          letsbreelhere@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Types.Constant
                     , Types.Expr
                     , Types.BlockState
                     , Types.GeneratorState
                     , Types.Gen
                     , Lexer
                     --, Parser
                     --, Supply
                     --, Codegen
                     --, LLVM
                     --, Compiler
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
                     , llvm-general >= 3.5.0.0
                     , llvm-general-pure >= 3.5.0
                     , containers
                     , lens
                     , mtl
                     , ghc-mod
  default-language:    Haskell2010

executable eggi
  hs-source-dirs:      app
  main-is:             REPL.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , egglang
                     , megaparsec
                     , text
  default-language:    Haskell2010

--executable eggc
  --hs-source-dirs:      app
  --main-is:             EggcExe.hs
  --ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  --build-depends:       base
                     --, egglang
                     --, megaparsec
                     --, text
                     --, llvm-general >= 3.5.0.0
                     --, llvm-general-pure >= 3.5.0
                     --, mtl
  --default-language:    Haskell2010

test-suite lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , egglang
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/breestanwyck/egglang
