name:                egglang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/breestanwyck/egglang#readme
license:             BSD3
license-file:        LICENSE
author:              Bree Elle Stanwyck
maintainer:          letsbreelhere@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Control.Cofree
                   , TypeCheck
                   , Types
                   , Types.BlockState
                   , Types.Constant
                   , Types.Expr
                   , Types.EType
                   , Types.FunDef
                   , Types.Gen
                   , Types.GeneratorState
                   , Types.Token
                   , Lexer
                   , Parser
                   , Supply
                   , Codegen
                   , Compiler
                   , LLVM
                   , Instructions
  build-depends:     base >= 4.7 && < 5
                   , transformers
                   , free
                   , megaparsec
                   , text
                   , llvm-general >= 3.5.1.2
                   , llvm-general-pure >= 3.5.1.0
                   , containers
                   , lens
                   , mtl
                   , ghc-mod
  default-language:    Haskell2010

executable eggc
  hs-source-dirs:      app
  main-is:             EggcExe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , egglang
                     , megaparsec
                     , text
                     , llvm-general >= 3.5.0.0
                     , llvm-general-pure >= 3.5.0
                     , mtl
  default-language:    Haskell2010

test-suite lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , egglang
                     , tasty
                     , tasty-hunit
                     , process
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/breestanwyck/egglang
