name:                egglang
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/breestanwyck/egglang#readme
license:             BSD3
license-file:        LICENSE
author:              Bree Elle Stanwyck
maintainer:          letsbreelhere@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:   Data.Expr
                   , Types
                   , Types.BlockState
                   , Types.Constant
                   , Types.Declaration
                   , Types.Expr
                   , Types.EType
                   , Types.Gen
                   , Types.GeneratorState
                   , Types.Token
                   , Lexer
                   , Parser
                   , Supply
                   , Codegen
                   , Codegen.Util
                   , Codegen.LambdaLifting
                   , Compiler
                   , LLVM
                   , Instructions
                   , Unification
                   , Unification.Substitutable
                   , Unification.Scheme
                   , Unification.TyContext
  build-depends:     base >= 4.7 && < 5
                   , transformers
                   , free
                   , ghc-mod
                   , megaparsec
                   , text
                   , llvm-general >= 3.5.1.2
                   , llvm-general-pure >= 3.5.1.0
                   , containers
                   , lens >= 4.14
                   , mtl
                   , free >= 4.12.4
  extensions: RankNTypes
            , GeneralizedNewtypeDeriving
            , DeriveFoldable
            , DeriveTraversable
            , LambdaCase
  default-language:    Haskell2010
  ghc-options: -Wall

executable eggc
  hs-source-dirs:      app
  main-is:             EggcExe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , egglang
                     , megaparsec
                     , text
                     , llvm-general >= 3.5.0.0
                     , llvm-general-pure >= 3.5.0
                     , mtl
  default-language:    Haskell2010

executable parsegg
  hs-source-dirs:      app
  main-is:             Parsegg.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , egglang
  default-language:    Haskell2010

executable eggi
  hs-source-dirs:      app
  main-is:             REPL.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , egglang
                     , containers
                     , free
  default-language:    Haskell2010

test-suite lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , egglang
                     , tasty
                     , tasty-hunit
                     , process
                     , containers
                     , free
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/breestanwyck/egglang
